2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Release 0.5.1.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* src/Makefile.am:

	Please distcheck.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:

	Updated for upcoming 0.5.1 release.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* libmuine/player-gst.c: (update_volume), (player_set_volume),
	(player_set_replaygain):

	Fix replaygain in the gst backend.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-xine.c: (update_volume), (player_set_volume),
	(player_set_replaygain):

	Fix replaygain in the xine backend.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Fix window visibility bug.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/PlaylistWindow.glade:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Hide information menu items again for upcoming release.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* README:
	* configure.in:

	Make the xine backend the default.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Remove db changing mutex, removes some semi-lockups seen when
	upgrading muine. Also make the changes thread and idle run
	concurrently.

2004-04-02  Jorn Baayen  <jbaayen@gnome.org>

	* README:
	* TODO:
	* src/Muine.cs:
	* src/Song.cs:

	Mime types not stored any longer. Broke the db format again,
	will rebuild on the startup.. 

	Also updated the docs to include info on the xine backend.

2004-04-02  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Fix last eos lockup with xine backend.

2004-04-02  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* configure.in:
	* libmuine/Makefile.am:
	R libmuine/metadata-gst.c:
	R libmuine/player-gst-0.7.c:
	A libmuine/player-gst.c: (player_get_type), (player_class_init),
	(player_init), (player_finalize), (player_new), (eos_idle_cb),